# text_image_adder

./: .gitignore  .pre-commit-config.yaml  README selenium medium pdfs.rm  README.rd  excel2pdf_converter.py  excel_creator.py  good_image_text_adder.py  pyproject.toml  setup.cfg  test_excel_creator.py  transcribe_whatsapp_audios.py
excels/: FACTURA_PIS_703.xls
ipc/: get_ipc.py
medium_pdf_store/: test_selenium.py
medium_pdf_store/selenium/: find_articles.py
src/medium_pdf_store/: test_selenium.py
tests/: test_excel_creator.py
tests/ipc/: test_ipc_compounded_works.py
