
[tool.poetry]
name = "medium_pdf_store"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "medium_pdf_store", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^9.4.0"
openpyxl = "^3.1.2"
xlutils = "^2.0.0"
speechrecognition = "^3.14.3"
selenium = "4.31.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"
pre-commit = "^4.1.0"
black = "^25.1.0"
flake8 = "^7.1.2"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line_length = 120
